--- a/Lecture8.ipynb
+++ b/Lecture8.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:4fae4ed2b92eb6f13bedbf4fb026c06ddc94cffdd3eed3d3d634ce23fd07daff"
+  "signature": "sha256:cf91b7d1b1202d873cb2c8fe0a19a930614cb21d75dc6eae2a8fd9567db3695b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -57,7 +57,7 @@
       "* Introduction\n",
       "\n",
       "    * Formulation\n",
-      "    * Types of Optimoization Problems\n",
+      "    * Types of Optimization Problems\n",
       "    * Basic Concepts\n",
       "    * Optimization Examples in Finance\n",
       "    \n",
@@ -739,8 +739,7 @@
       "The algorithm alternates between two main decisions: determine a descent direction  $\\delta \\bx$ and choose a step size $t$.\n",
       "* Different ways of choosing the descent direction giving rise to different descent method and convergence rate\n",
       "\n",
-      "* The line search method falls into two categories: exact line search and backtracking line search. Won't get into details of these.\n",
-      "\n",
+      "* The line search method falls into two categories: exact line search and backtracking line search. \n",
       "\n"
      ]
     },
@@ -791,7 +790,7 @@
       "$$\n",
       "\\phi'(t) = 0 =  [{\\bs\\nabla} f(\\bx^k + t \\bs\\delta x)]^T \\bs\\delta x ,\n",
       "$$\n",
-      "(notice the two consecutive search directions will be perpendicular to each other, we've met this problem before, what's the startegy?).\n",
+      "(notice the two consecutive search directions will be perpendicular to each other, we've met this problem before, what's the strategy?).\n",
       "\n",
       "* Convergence: the steepest descent method converges linearly, and it will behave badly if the condition number of the **Hessian** (the second order derivative matrix) is large.\n",
       "\n",
@@ -1071,7 +1070,7 @@
      },
      "source": [
       "\n",
-      "* For the **equality constrained** case, let's take a look at the Langrange function\n",
+      "* For the **equality constrained** case, let's take a look at the Lagrange function\n",
       "\n",
       "$$\n",
       "\\ml(\\bx, \\bmu) = f(\\bx) + \\bmu^T \\bs{h}(\\bx)\n",
@@ -1138,6 +1137,25 @@
       }
      },
      "source": [
+      "\n",
+      "\n",
+      "* Best way to visualize the conditions 1 and 4 above is through the followimng example, where\n",
+      "\n",
+      "$$ f(\\bx^*) = (x_1 -2)^2 + (x_2 -2)^2, \\;\\;\\; g(\\bx^*) = x_1^2 + x_2^2 - 1$$\n",
+      "\n",
+      "\n",
+      "<center><img src = \"img/KKT_cond_4.PNG\" height=650 width=650></center>\n",
+      "\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
       "## Solution Methods\n",
       "\n",
       "* The solution method for the constrained optimization problems are generally an extension of those for unconstrained version. We are not going into great details, but will use the Sequential Quadratic Programming (**SQP**) method as an example.\n",
@@ -1184,7 +1202,7 @@
       "* HW on the slide for Duality\n",
       "* For the portfolio optimization example given earlier, derive the dual problem.\n",
       "\n",
-      "* Due on Mar 8th, 2015.\n"
+      "* Due on Apr 8th, 2015.\n"
      ]
     }
    ],
