--- a/Lecture9.ipynb
+++ b/Lecture9.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:a2fb4255a99b68c6c0330b40197ac2dcc94e7aa5adaa68a10d34f9c1625ab545"
+  "signature": "sha256:bbd2e3d13802a3136dbf83dfa6c932171c41fc86687294277c69f90891b960ec"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -46,7 +46,7 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "fragment"
+       "slide_type": "slide"
       }
      },
      "source": [
