--- a/Lecture12.ipynb
+++ b/Lecture12.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:067c8663d993ded432b56a8a5d2159e79f7c6187cc958f7adfdd8081547910b9"
+  "signature": "sha256:c9d746c9245d6abd4fc14cfeded83ef4e05bdecc137293d57bf5d34d37555d5e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -112,10 +112,10 @@
       "$$\n",
       "\n",
       "\n",
-      "* Classified into three categories: **Hyperbolic, Parabolic and Elliptic**\n",
+      "* It can be classified into three categories: **Hyperbolic, Parabolic and Elliptic**\n",
       "\n",
       "\n",
-      "* In general, the different type of equations makes a big difference of how the solution behave and\n",
+      "* In general, the different types of equations make a big difference in how the solutions behave and\n",
       "\n",
       "\n",
       "* on how we can solve them more effectively\n",
@@ -217,7 +217,7 @@
       "## Initial and Boundary Conditions \n",
       "\n",
       "\n",
-      "* Depending on the problem, **initial conditions (IC)**\n",
+      "* Depending on the problem, we usually have **initial conditions (IC)**\n",
       "\n",
       "$$\n",
       "\\large{\n",
@@ -253,7 +253,7 @@
       "$$\n",
       "\n",
       "\n",
-      "* It is of the parabolic type, can be converted into the standard Heat equation form by doing change-of-variables\n",
+      "* It belongs to the parabolic type, and can be converted into the standard Heat equation form by a change-of-variables\n",
       "\n",
       "* For **European Call** option, the \"initial\" (the payoff function) and boundary conditions are\n",
       "\n",
@@ -303,10 +303,10 @@
       "\n",
       "\n",
       "\n",
-      "* Very rare that the PDEs have closed form analytical solutions, in general PDEs need to be solved numerically.\n",
+      "* Very rare that the PDEs have closed form solutions, in general, can only be solved numerically.\n",
       "\n",
       "\n",
-      "* Will focus on the finite difference method (FDM): other methods exist and can be more appropriate---very much depends on the actual problems at hand.\n",
+      "* Will focus on the finite difference method (FDM): other numerical methods exist and can be more appropriate---very much depends on the actual problems at hand.\n",
       "\n"
      ]
     },
@@ -323,10 +323,10 @@
       "## Discretization\n",
       "\n",
       "\n",
-      "* First step in solving PDEs using FDM is to represent the solution $u(x,t)$ as a discrete collection of values at a well distributed points in space and time in the proper domain.\n",
+      "* First step in solving PDEs using FDM is to represent the solution $u(x,t)$ as a discrete collection of values at a well distributed grid points in space and time in the proper domain.\n",
       "\n",
       "\n",
-      "* For example, for the  rectangular domain in space and time with $t \\in [0, T]$ and $x\\in [x_{min}, x_{max}]$, we can represent the points simply as $t_0 = 0, t_1, t_2, \\cdots, t_M = T$ in time and $x_0 = x_{min}, x_1, x_2, \\cdots, x_N = x_{max}$ in space, where the grid is uniform, i.e. $t_{k+1} = t_k + \\triangle t, \\;\\triangle t = \\frac{T}{M}$ and $x_{i+1} = x_i + \\triangle x, \\;\\triangle x = \\frac{x_{max}-x_{min}}{N}$.\n",
+      "* For example, for the  rectangular domain in space and time with $t \\in [0, T]$ and $x\\in [x_{min}, x_{max}]$, we can represent the points simply as $t_0 = 0, t_1, t_2, \\cdots, t_M = T$ in time and $x_0 = x_{min}, x_1, x_2, \\cdots, x_N = x_{max}$ in space. The grid is uniform, i.e. $t_{k+1} = t_k + \\triangle t, \\;\\triangle t = \\frac{T}{M}$ and $x_{i+1} = x_i + \\triangle x, \\;\\triangle x = \\frac{x_{max}-x_{min}}{N}$.\n",
       "\n",
       "\n",
       "* The discretized version of the solution will be represented by the values of \n",
@@ -336,7 +336,7 @@
       "$$\n",
       "\n",
       "\n",
-      "* The values of $u(x,t)$ at any other desired points can of course be approximated via interpolation.\n",
+      "* The values of $u(x,t)$ at any other desired points can be approximated via interpolation.\n",
       "\n",
       "\n"
      ]
@@ -351,7 +351,7 @@
      "source": [
       "\n",
       "\n",
-      "* It is not necessary the most efficient to work with a uniform mesh, in fact, it rarely is.\n",
+      "* A uniform mesh may not necessary be the most efficient form to work with, in fact, it rarely is.\n",
       "\n",
       "\n",
       "* A greatly simplified rule-of-thumb: the mesh needs to be refined around the region where the function varies a lot\n",
@@ -360,7 +360,7 @@
       "* On the other hand, the mesh can be relatively coarse if the function is smooth and changing slowly\n",
       "\n",
       "\n",
-      "* In finance, the time grid is well advised to keep the **important** dates as grid points: such as cash flow dates, contractual term schedule dates, etc. The spacing of these dates is most likely not uniform.\n",
+      "* In finance, the time grid is well advised to keep the **important** dates as grid points: such as cash flow dates, contractual schedule dates, etc. The spacing of these dates is most likely not uniform.\n",
       "\n",
       "\n",
       "\n",
@@ -378,11 +378,11 @@
       "\n",
       "## Finite Difference Methods(FDM)\n",
       "\n",
-      "* Toolkit table for finite difference approximation\n",
+      "* Toolkit for finite difference approximation\n",
       "$\n",
       "\\renewcommand{FDut}{\\frac{u_{i,k+1}-u_{i,k}}{\\triangle t}}\n",
       "\\renewcommand{FDutb}{\\frac{u_{i,k}-u_{i,k-1}}{\\triangle t}}\n",
-      "\\renewcommand{FDutc}{\\frac{u_{i,k_1}-u_{i,k-1}}{2\\triangle t}}\n",
+      "\\renewcommand{FDutc}{\\frac{u_{i,k+1}-u_{i,k-1}}{2\\triangle t}}\n",
       "\\renewcommand{FDutt}{\\frac{u_{i,k+1}-2u_{i,k}+u_{i,k-1}}{\\triangle t^2}}\n",
       "\\renewcommand{FDux}{\\frac{u_{i+1,k}-u_{i,k}}{\\triangle x}}\n",
       "\\renewcommand{FDuxb}{\\frac{u_{i,k}-u_{i-1,k}}{\\triangle x}}\n",
@@ -412,15 +412,19 @@
      "source": [
       "## The Explicit Method \n",
       "\n",
-      "* For convenience, reverse the time for Black-Scholes notation: $t_0 = T, t_1, t_2, \\cdots, t_M = 0$ and $t_{k+1} = t_k - \\triangle t$\n",
+      "* For convenience, reverse the time for Black-Scholes notation: $ t \\leftarrow T - t$\n",
+      "\n",
+      "$$\n",
+      "\\PDut - \\frac{1}{2}\\sigma^2S^2\\PDuSS - rS\\PDuS + ru = 0\n",
+      "$$\n",
       "\n",
       "* Approximate the Black-Scholes Eqn by\n",
       "\n",
       "$$\n",
-      "\\FDut - \\frac{1}{2} \\sigma^2 x_i^2 \\FDuxx - r x_i \\FDuxc = - r u_{i,k}\n",
+      "\\FDut - \\frac{1}{2} \\sigma^2 x_i^2 \\FDuxx - r x_i \\FDuxc + r u_{i,k} = 0\n",
       "$$\n",
       "\n",
-      "* To show it's explicit, rewrite it as\n",
+      "* This can be rewritten simply as\n",
       "\n",
       "\\begin{aligned}\n",
       "u_{i,k+1} & = \\left\\{ \\frac{1}{2}\\sigma^2 x_i^2 \\frac{\\triangle t}{\\triangle x^2} - r x_i \\frac{\\triangle t}{2\\triangle x} \\right\\} u_{i-1,k}\n",
@@ -442,7 +446,7 @@
      "source": [
       "## Consistency, Stability and Convergence\n",
       "\n",
-      "* For any FDM that are rmployed to solve practical problems, we should ask\n",
+      "* For any FDM that are used to solve practical problems, we should ask\n",
       "\n",
       "    * 1) How acurate is the method?    \n",
       "    \n",
@@ -471,7 +475,7 @@
       "\n",
       "\n",
       "\n",
-      "* Taylor series expansion can verify this or one can read this off from the Table.\n",
+      "* Taylor series expansion can verify this (or one can simply read this off of the Toolkit Table).\n",
       "\n",
       "\n",
       "* So the explicit method above is consistent of order 1 in time and order 2 in spatial variable.\n",
@@ -525,7 +529,7 @@
       "\n",
       "\n",
       "\n",
-      "* Looking for $\\epsilon_{j,k} $ in the Fourier expansion form,\n",
+      "* Looking for $\\epsilon_{j,k} $ in the Fourier expansion representation,\n",
       "\n",
       "$$\n",
       "\\epsilon(x,t) = \\sum_{m= 1}^{M} e^{at}e^{il_mx}\n",
@@ -536,7 +540,7 @@
       "M = \\frac{L}{\\triangle x}$\n",
       "\n",
       "\n",
-      "* Due to linearity again, the error analysis can be performed without any loss of generality by looking at a single term of the expansion\n",
+      "* Due to linearity again, the error analysis can be performed (without any loss of generality) by looking at a single term of the expansion\n",
       "\n",
       "$$\n",
       "e^{at_k}e^{il_mx_j}\n",
@@ -552,13 +556,13 @@
      },
      "source": [
       "\n",
-      "* In fact, we are really interested in the amplification of the error, which is\n",
+      "* In fact, we are really interested in the amplification of the error,\n",
       "\n",
       "$$\n",
       "\\frac{\\epsilon_{j,k+1}}{\\epsilon_{j,k}} = e^{a\\triangle t}\n",
       "$$\n",
       "\n",
-      "* The stability analysis in the Von Neumann method is to analyze the form of $e^{a\\triangle t}$ so that \n",
+      "* The stability analysis in the Von Neumann method is simply to analyze the form of $e^{a\\triangle t}$ so that \n",
       "\n",
       "$$\n",
       "||e^{a\\triangle t}|| < 1\n",
@@ -686,7 +690,7 @@
       "* The **Lax equivalence theorem** holds for PDE as well.\n",
       "\n",
       "\n",
-      "* Takeaway: when implementing FDM for PDEs, study the **CFL (Courant-Fletcher-Levy)** stability condition for your scheme.\n",
+      "* Takeaway: when implementing FDM for PDEs, study the **CFL (Courant\u2013Friedrichs\u2013Lewy)** stability condition before building your discretization grid.\n",
       "\n"
      ]
     },
@@ -728,14 +732,14 @@
      },
      "source": [
       "\n",
-      "* The local truncation error is \n",
+      "* The local truncation error\n",
       "\n",
       "$$\n",
       "T(x,t) = O(\\triangle x^2 + \\triangle t)\n",
       "$$\n",
       "\n",
       "\n",
-      "* The amplification factor for $r=0$ is\n",
+      "* And the amplification factor for $r=0$\n",
       "\n",
       "\n",
       "$$\n",
@@ -787,7 +791,7 @@
      "source": [
       "# Numerical Examples \n",
       "\n",
-      "* Will go through the Black Scholes exmaple in next lecture.\n",
+      "* Will go through the Black Scholes example in next lecture.\n",
       "\n",
       "\n",
       "\n"
@@ -820,7 +824,7 @@
      "source": [
       "# Homework \n",
       "\n",
-      "* Derive the CFL condition for the Crank-Nicholson method assuming $r=0$.\n",
+      "* Derive the CFL condition for the Crank-Nicholson method for the Black-Scholes PDE, assuming $r=0$.\n",
       "\n",
       "\n",
       "\n"
