--- a/Lecture12.ipynb
+++ b/Lecture12.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:ac5f19c38cd1d80150ad1fdb6c934fe675e457cd0182a545512f66e25ecba3cd"
+  "signature": "sha256:5abb88d0dc71f6ba0008db7dda60709848becda1104f720a1b6a448ba70e2396"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -281,6 +281,14 @@
       "* For **European Put** option, the \"initial\" (the payoff function) and boundary conditions are\n",
       "\n",
       "\\begin{aligned}\n",
+      "\\renewcommand{FDut}{\\frac{u_{i,k+1}-u_{i,k}}{\\triangle t}}\n",
+      "\\renewcommand{FDutb}{\\frac{u_{i,k}-u_{i,k-1}}{\\triangle t}}\n",
+      "\\renewcommand{FDutc}{\\frac{u_{i,k+1}-u_{i,k-1}}{2\\triangle t}}\n",
+      "\\renewcommand{FDutt}{\\frac{u_{i,k+1}-2u_{i,k}+u_{i,k-1}}{\\triangle t^2}}\n",
+      "\\renewcommand{FDux}{\\frac{u_{i+1,k}-u_{i,k}}{\\triangle x}}\n",
+      "\\renewcommand{FDuxb}{\\frac{u_{i,k}-u_{i-1,k}}{\\triangle x}}\n",
+      "\\renewcommand{FDuxc}{\\frac{u_{i+1,k}-u_{i-1,k}}{2\\triangle x}}\n",
+      "\\renewcommand{FDuxx}{\\frac{u_{i+1,k}-2u_{i,k}+u_{i-1,k}}{\\triangle x^2}}\n",
       "&u(S,T) = \\max(K-S, 0);\n",
       "\\\\\n",
       "&u(0,t) = Ke^{-r(T-t)}; \n",
@@ -379,6 +387,7 @@
       "## Finite Difference Methods(FDM)\n",
       "\n",
       "* Toolkit for finite difference approximation\n",
+      "\n",
       "$$\n",
       "\\renewcommand{FDut}{\\frac{u_{i,k+1}-u_{i,k}}{\\triangle t}}\n",
       "\\renewcommand{FDutb}{\\frac{u_{i,k}-u_{i,k-1}}{\\triangle t}}\n",
