correction of many errors, much obliged!

--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:57853509d3b088789f290dbc2288e598361ada3aa002126f748b3f06d7ca1bd7"
+  "signature": "sha256:aa0494e6cfaa8d41c920ad821f0f99c5f2a688ef68ef6249814edb416a1a3856"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -144,7 +144,7 @@
      },
      "source": [
       "## Inner product\n",
-      "* $\\langle \\bs u, a \\bs v_1 + b \\bs v_2 \\rangle = a \\langle \\bs{u, v_1} \\rangle + a \\langle \\bs{u, v_2} \\rangle$ \n",
+      "* $\\langle \\bs u, a \\bs v_1 + b \\bs v_2 \\rangle = a \\langle \\bs{u, v_1} \\rangle + b \\langle \\bs{u, v_2} \\rangle$ \n",
       "* $\\langle \\bs{u, v} \\rangle = \\langle \\bs{v, u} \\rangle^c$ \n",
       "* $\\langle \\bs{u, u} \\rangle \\ge 0$ \n",
       "* $\\langle \\bs{u, u} \\rangle = 0 \\iff u = 0$ \n",
@@ -254,7 +254,7 @@
       "* Identity matrix $I$: $I A = A I = A$\n",
       "* $A^T$ is the transpose of $A$: $a^T_{ij} = a_{ji}$\n",
       "* Symmetric matrix: $A = A^T$\n",
-      "* $A^*$ is the adjuoint of $A$: $a^*_{ij} = a_{ji}^c$\n",
+      "* $A^*$ is the adjoint of $A$: $a^*_{ij} = a_{ji}^c$\n",
       "  * real matrix: $A^T = A^*$\n",
       "  * self-adjoint (Hermitian) matrix: $A = A^*$\n",
       "* Inverse matrix: $AA^{-1} = A^{-1}A = I$\n",
@@ -1366,7 +1366,7 @@
       "Suppose there are $n$ risky assets on the market, with random return vector $\\bs r$ whose covariance matrix is $V$,\n",
       "\n",
       "* $\\bs w$: a portfolio, its elements are dollar amounts invested in each asset\n",
-      "  * $\\bs w^T \\bs r$ is the portfolio's return\n",
+      "  * $\\bs w^T \\bs r$ is the portfolio's return in dollar amount\n",
       "  * $\\sigma^2 = \\bs w^TV\\bs w$: the variance of its return\n",
       "* $\\bs w_b$: a benchmark portfolio, e.g. a sector index\n",
       "  * $\\bs \\beta_b = \\frac{V\\bs w_b}{\\sigma^2_b} $: the beta vector of individual assets to the benchmark portfolio\n",
@@ -1401,11 +1401,13 @@
      },
      "source": [
       "## Optimal portfolio and Sharp Ratio\n",
-      "Gien the view $\\bs f$, the optimal portfolio $\\bs w$ to express the view is:\n",
+      "Given the view $\\bs f$, the optimal portfolio $\\bs w$ to express the view is:\n",
       " * minimize the variance (risk): $\\bs w^TV\\bs w$\n",
-      " * while preserving an unit excess return: $\\bs w^T \\bs f = 1$\n",
+      " * while preserving an unit dollar of excess return: $\\bs w^T \\bs f = 1$\n",
       " \n",
-      "which gives the highest Sharp ratio under the view $\\bs f$."
+      "which gives a portfolio with the largest Sharp ratio under the view $\\bs f$.\n",
+      "* it can then be scaled to match the dollar amount to be invested\n",
+      "* the scaling of does not change the Sharp ratio and the optimality "
      ]
     },
     {
@@ -1442,7 +1444,9 @@
       "$$ \\bs f^T(\\lambda V^{-1} \\bs f) = 1 \\iff \\lambda = \\frac{1}{\\bs f^T V^{-1} \\bs f}$$\n",
       "$$\\bs w = \\frac{V^{-1}\\bs f}{\\bs f^T V^{-1} \\bs f}$$\n",
       "\n",
-      "$\\bs w$ is often called the characteristic portfolio for the return forecast $\\bs f$."
+      "$\\bs w$ is often called the characteristic portfolio for the return forecast $\\bs f$.\n",
+      "* the portfolio composition is unchanged if $\\bs f$ is scaled by a constant\n",
+      "* $\\bs f$ forecast is therefore only meaningful in a relative sense"
      ]
     },
     {
@@ -1455,6 +1459,8 @@
      "source": [
       "## Important characteristic portfolios\n",
       "\n",
+      "Note that $\\bs f$ is only meaningful in a reletive sense.\n",
+      "\n",
       "### Identical returns: $\\bs{f = e} = [1, 1, ...., 1]^T$: \n",
       "\n",
       "* A naive view that all assets have the same excess returns (zero information)\n",
@@ -1466,7 +1472,7 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "fragment"
+       "slide_type": "-"
       }
      },
      "source": [
