--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:b0c2fb7d32bee859395607c4bea663bbb81497ede73bd86b2369d09c904bd02c"
+  "signature": "sha256:e8efb821933864ebe03dd2406fc8e8e4695b797219c83457b6fae567bb6cc6f1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -368,7 +368,7 @@
       "* where each column of $R$ is a eigenvector, and $\\Lambda$ is a diagnoal matrix of eigenvalues\n",
       "\n",
       "\n",
-      "$R$ is invertable because eigen vectors are all independent:\n",
+      "$R$ is invertible because eigen vectors are all independent:\n",
       "\n",
       "$$\\begin{array} \\\\\n",
       "R^{-1} A &= \\Lambda R^{-1} \\\\\n",
@@ -384,15 +384,15 @@
       }
      },
      "source": [
-      "## Eigenvalue decomposition\n",
-      "\n",
       "If $A$ is real and symmetric: $A^* = A$:\n",
       "\n",
       "* $\\Lambda^* = \\Lambda$: all eigenvalues are real\n",
       "* we can consider real eigen vectors only without losing generaliy\n",
       "* $R$ is orthogonal: $(R^{-1})^* = (R^{-1})^T = R \\iff RR^T = I$\n",
       "* $A =  R\\Lambda R^T$, this diagonalization is called the eigenvalue decomposition (EVD)\n",
-      "* all eigenvalues are positive if and only if $A$ is SPD"
+      "* all eigenvalues are positive if and only if $A$ is SPD\n",
+      "\n",
+      "The conclusion holds even if there are duplicated eigen values, with some care. "
      ]
     },
     {
@@ -422,7 +422,8 @@
       "This process can be repeated to find all eigenvalues and vectors:\n",
       "\n",
       "* $\\bs v_2$ maximizes $\\bs u^T A \\bs u$ for all unit $\\bs u$ that is orthogonal to $\\bs v_1$, i.e, $\\bs u^T \\bs v_1 = 0$.\n",
-      "* $\\bs v_i$ maximizes amongst those unit $\\bs u$ that are orthogonal to $\\bs v_1, ..., \\bs v_{i-1}$"
+      "* $\\bs v_i$ maximizes amongst those unit $\\bs u$ that are orthogonal to $\\bs v_1, ..., \\bs v_{i-1}$\n",
+      "* In the case of duplicated eigen values, $\\bs v_i$ is not unique, we can pick any $\\bs v_i$ and continue."
      ]
     },
     {
@@ -1757,7 +1758,7 @@
       "Therefore, among those unit $\\bs u, \\bs v$ that are orthogonal to $\\bs{u_1, v_1}$ :\n",
       "\n",
       "* $\\bs {u_2, v_2}$ maximizes $\\bs u^T M \\bs v$  \n",
-      "* this process can repeat for all singular vectors"
+      "* this process can repeat for all singular vectors (assuming singular values are distinct)"
      ]
     },
     {
