--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:e66af44e62f778e5c7c0ca563206933b156125758a93f89848897b8fcc461256"
+  "signature": "sha256:c9e5cab1106e2ed08f3082fe9f8a10f001e834ab3d66276b7bdd964e7d420a4d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -441,7 +441,7 @@
       }
      },
      "source": [
-      "The challenging $\\Phi(x) + .05x - 0.5 = 0$ converges under zbrent:"
+      "The challenging $\\Phi(x) + .05x - 0.5 = 0$ converges under Brent:"
      ]
     },
     {
