--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -226,7 +226,7 @@
       "\n",
       "$\\hat{u}$ is the mean of the samples:\n",
       "\n",
-      "$$\\hat{\\mu} = \\frac{1}{n}\\sum_i r_{i=1}^n = \\frac{1}{n} \\bs 1^T \\bs r$$\n",
+      "$$\\hat{\\mu} = \\frac{1}{n}\\sum_{i=1}^n r_i = \\frac{1}{n} \\bs 1^T \\bs r$$\n",
       "\n",
       "$\\hat u$ is an unbiased estimator of the population mean $\\mu$: \n",
       "\n",
@@ -264,7 +264,7 @@
       "$$\n",
       "\n",
       "$\\hat{s}^2 = \\frac{n}{n-1}\\hat{\\sigma}^2$ is therefore an unbiased estimator of $\\sigma^2$.\n",
-      "* $\\hat s^2$ is normally distributed (for large $n$), due to central limit theorem"
+      "* $\\hat s^2$ is normally distributed for large $n$, due to central limit theorem"
      ]
     },
     {
@@ -1976,7 +1976,7 @@
       "at time $t_{m-1}$: $\\hs(t_{m-1})$ and the corresponding c.v. $\\bs v(t_m)e^{-r\\delta}$ are known:\n",
       "  1. construct a smooth function $u(s; t_{m-1})$ that minimizes \n",
       "  \n",
-      "  $$\\left\\Vert \\ind\\left(\\hs(t_{m-1}) < k\\right) \\odot \\left( u\\left(\\hs(t_{m-1}); t_{m-1}\\right) - \\bs c(t_m)e^{-r\\delta} \\right)\\right\\Vert_2 $$\n",
+      "  $$\\left\\Vert \\ind\\left(\\hs(t_{m-1}) < k\\right) \\odot \\left( u\\left(\\hs(t_{m-1}); t_{m-1}\\right) - \\bs v(t_m)e^{-r\\delta} \\right)\\right\\Vert_2 $$\n",
       "  \n",
       "    * $u(\\cdot)$ is an estimate of the option's c.v., based on $\\hs(t_{m-1})$\n",
       "    * $u(s; t_{m-1}) = c_0 + c_1 s + c_2 s^2$, coeficients are solved by least square\n",
