--- a/Lecture7.ipynb
+++ b/Lecture7.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:1821e13c1ddd52cc3b706bc8a003fec45260d32515ae4e4cb910939df22acb91"
+  "signature": "sha256:15bbc363feba96106e9ee283c38b6a225aa5a8896d20fbe423df4f9d069d8058"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1441,7 +1441,7 @@
       }
      },
      "source": [
-      "## Giranov theorem\n",
+      "## Girsanov theorem\n",
       "\n",
       "Given a 1-D Brownian $w^{\\mathbb P}(t)$ in the $\\mathbb P$ measure, and a drifted process $x(t)$:\n",
       "\n",
@@ -1463,7 +1463,7 @@
       }
      },
      "source": [
-      "## Giranov in one chart"
+      "## Girsanov in one chart"
      ]
     },
     {
@@ -1564,7 +1564,7 @@
       }
      },
      "source": [
-      "## Understand Giranov\n",
+      "## Understand Girsanov\n",
       "\n",
       "Given a $\\mathbb P$ Brownian motion $w^{\\mathbb P}(s)$, we try to find a $\\mathbb Q$ under which:\n",
       "* $\\frac{x(s)}{\\sqrt s} = \\frac{w^{\\mathbb P}(s) + \\theta s}{\\sqrt s} = \\frac{w^{\\mathbb P}(s)}{\\sqrt s} + \\theta \\sqrt s$ is standard normal\n",
@@ -1597,7 +1597,7 @@
       "$$ \\mathbb P [\\sup_{s<t} \\left(w(s)\\right) > b)] = 2\\mathbb P[w(t) > b] $$\n",
       "\n",
       "* the results are similar for hitting a lower barrier $b < 0$\n",
-      "* Giranov theorem can be used to compute the probability of a drifted process $d x(t) = \\theta dt + dw(t)$ hitting the barrier by time $t$."
+      "* Girsanov theorem can be used to compute the probability of a drifted process $d x(t) = \\theta dt + dw(t)$ hitting the barrier by time $t$."
      ]
     },
     {
@@ -1608,9 +1608,9 @@
       }
      },
      "source": [
-      "## Giranov in multimension\n",
+      "## Girsanov in multimension\n",
       "\n",
-      "Giranov theorem is easily extendible to independent multi-D Brownians:\n",
+      "Girsanov theorem is easily extendible to independent multi-D Brownians:\n",
       "\n",
       "$$\\begin{array}{l}\n",
       "\\small\n",
@@ -1631,7 +1631,7 @@
       }
      },
      "source": [
-      "## Giranov with correlated Brownians\n",
+      "## Girsanov with correlated Brownians\n",
       "\n",
       "Transform to independent Brownians first:\n",
       "\n",
@@ -2234,7 +2234,7 @@
      "source": [
       "Stratification is similar to LDS in spirit, but:\n",
       "* more difficulty in extending to higher dimensions, the number of strata expodes with dimensions\n",
-      "* less popular than LDS in praticie"
+      "* less popular than LDS in practice"
      ]
     },
     {
