--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:55343faf0512c343364acf6c8626e4072c9ca6dacbd7f4016a32d8bfc17ccbd9"
+  "signature": "sha256:1aea4b35d44131ee30202db768621dbb9064eed6ff012e7aae7fcaae87f25dca"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1774,7 +1774,7 @@
       "\n",
       "Hedging are costly in practice\n",
       "\n",
-      "* bid/ask, capital, finacing, rebalancing  etc\n",
+      "* bid/ask, capital, financing, rebalancing  etc\n",
       "\n",
       "But not hedging is usually more costly\n",
       "\n",
@@ -2324,10 +2324,10 @@
       "* Source of Theta includes reduction in maturity and accrual of coupon \n",
       "* The passing of time is not volatile, it is not considered a risk factor\n",
       "* Different hedges can lead to different theta profile\n",
-      "* It is not feasilbe nor necessary to maintain a flat theta\n",
+      "* It is neither feasilbe nor necessary to maintain a flat theta\n",
       " \n",
       "Theta and convexity are often the trade off.\n",
-      "* Positive theta usually means negative convexity, and vise versa"
+      "* Positive theta usually means negative convexity, and vice versa"
      ]
     },
     {
