fixed a number of errors, much obliged!

--- a/Lecture12.ipynb
+++ b/Lecture12.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:43297cefd5f979dd52c22610e2aefb9a171e86d44d966cdb318c64ec5fe85650"
+  "signature": "sha256:a04778a584b67fa0117dd004379ac4a697f43bd9a63aab77d5c931e1c6d26096"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -807,7 +807,7 @@
      "source": [
       "# Higher Dimension Methods \n",
       "\n",
-      "* What to do when there are more than one spatial variables (Asian Option)? - ADI methods.\n",
+      "* What to do when there are more than one spatial variables (Heston Stochastic Vol Model)? - ADI methods.\n",
       "\n",
       "\n",
       "\n",
