--- a/Lecture13.ipynb
+++ b/Lecture13.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:73cac60298a41540168562550b9119c5dc4f59399eb6fdec5787b79d2a34f7ab"
+  "signature": "sha256:ab1321c005642d8a4625229ab142152b48303f9e5b50141e69bd5cb3287a295c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -294,8 +294,21 @@
       "$$\n",
       "u_{i+1,k} = \\tilde{u}^n_{i,k}\n",
       "$$\n",
+      "\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "\n",
       "\n",
       "* Essentially, this says trying to solve the problem in a multistep aproach: each step is equivalent to the one dimensional Crank-Nicolson method.\n",
+      "\n",
       "\n",
       "* This is  merely the basic form, the strategy can be customized to further improve the efficiency (not all steps are implicit) or accuracy (high order)\n"
      ]
