fixed a number of errors, much obliged!

--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:aa0494e6cfaa8d41c920ad821f0f99c5f2a688ef68ef6249814edb416a1a3856"
+  "signature": "sha256:f98c03b73c6fe85cfc2d268334f80d57732049065707a040fb3eba91654a44ab"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1407,7 +1407,7 @@
       " \n",
       "which gives a portfolio with the largest Sharp ratio under the view $\\bs f$.\n",
       "* it can then be scaled to match the dollar amount to be invested\n",
-      "* the scaling of does not change the Sharp ratio and the optimality "
+      "* the scaling does not change the portfolio's Sharp ratio and optimality "
      ]
     },
     {
@@ -1445,7 +1445,7 @@
       "$$\\bs w = \\frac{V^{-1}\\bs f}{\\bs f^T V^{-1} \\bs f}$$\n",
       "\n",
       "$\\bs w$ is often called the characteristic portfolio for the return forecast $\\bs f$.\n",
-      "* the portfolio composition is unchanged if $\\bs f$ is scaled by a constant\n",
+      "* the resulting portfolio composition is unchanged if $\\bs f$ is scaled by a constant\n",
       "* $\\bs f$ forecast is therefore only meaningful in a relative sense"
      ]
     },
@@ -1459,24 +1459,15 @@
      "source": [
       "## Important characteristic portfolios\n",
       "\n",
-      "Note that $\\bs f$ is only meaningful in a reletive sense.\n",
+      "Note that $\\bs f$ is only meaningful in a relative sense, the resulting portfolio remains unchanged if $\\bs f$ is scaled.\n",
       "\n",
-      "### Identical returns: $\\bs{f = e} = [1, 1, ...., 1]^T$: \n",
+      "Identical returns: $\\bs{f = e} = [1, 1, ...., 1]^T$: \n",
       "\n",
       "* A naive view that all assets have the same excess returns (zero information)\n",
       "* $\\bs e^T\\bs w = 1$ means it is a fully invested portfolio of \\$1\n",
-      "* $\\bs w_e = \\frac{V^{-1}\\bs e}{\\bs e^TV^{-1}\\bs e}$ has the minimum variance amongst all fully invested portfolio"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "-"
-      }
-     },
-     "source": [
-      "### Beta to a benchmark portfolio: $\\bs{f = \\beta_b} = \\frac{V\\bs w_b}{\\sigma_b^2}$:\n",
+      "* $\\bs w_e = \\frac{V^{-1}\\bs e}{\\bs e^TV^{-1}\\bs e}$ has the minimum variance amongst all fully invested portfolio\n",
+      "\n",
+      "Beta to a benchmark portfolio: $\\bs{f = \\beta_b} = \\frac{V\\bs w_b}{\\sigma_b^2}$:\n",
       "\n",
       "* $\\bs{\\beta_b w} = 1$ means the portfolio has a beta of 1 to the benchmark portfolio $\\bs w_b$\n",
       "* $\\bs w_{\\beta} = \\frac{V^{-1}\\bs \\beta_b}{\\bs \\beta_b^T V^{-1}\\bs \\beta_b} = \\frac{\\bs w_b}{\\bs{\\beta_b^T w_b}} = \\bs w_b$, which is the benchmark portfolio itself\n",
