--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:1aea4b35d44131ee30202db768621dbb9064eed6ff012e7aae7fcaae87f25dca"
+  "signature": "sha256:3ed67a39ef373fd5266eed0acdeb7ed2a814d659ba235cc5cef23f68f9d14a75"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2324,7 +2324,7 @@
       "* Source of Theta includes reduction in maturity and accrual of coupon \n",
       "* The passing of time is not volatile, it is not considered a risk factor\n",
       "* Different hedges can lead to different theta profile\n",
-      "* It is neither feasilbe nor necessary to maintain a flat theta\n",
+      "* It is neither feasible nor necessary to maintain a flat theta\n",
       " \n",
       "Theta and convexity are often the trade off.\n",
       "* Positive theta usually means negative convexity, and vice versa"
