--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -264,7 +264,7 @@
       "$$\n",
       "\n",
       "$\\hat{s}^2 = \\frac{n}{n-1}\\hat{\\sigma}^2$ is therefore an unbiased estimator of $\\sigma^2$.\n",
-      "* $\\hat s^2$ is normally distributed for large $n$, due to central limit theorem"
+      "* $\\hat s^2$ follows Chi square distribution, converging to normal distribution for large $n$ (central limit theorem)"
      ]
     },
     {
