--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:e8efb821933864ebe03dd2406fc8e8e4695b797219c83457b6fae567bb6cc6f1"
+  "signature": "sha256:8d7cfc6351c790d0d3be782b0d438a96b29e384c61d340aa002423d12baaab03"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -654,7 +654,7 @@
       "\n",
       "<center><img src = \"img/householder.png\" height=300 width=300></center>\n",
       "\n",
-      "* It is obvious from the figure that: $\\bs u = \\bs x - \\Vert \\bs x \\Vert_2 \\hat{\\bs e}_1$."
+      "* It is obvious from the figure that: $\\bs u = \\frac{1}{2}\\left(\\bs x - \\Vert \\bs x \\Vert_2 \\hat{\\bs e}_1\\right)$."
      ]
     },
     {
