--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:f98c03b73c6fe85cfc2d268334f80d57732049065707a040fb3eba91654a44ab"
+  "signature": "sha256:e4e16f2e0b9cef3392515bbcce27555366c683583daacf0012371c9aa8cf4cce"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1484,9 +1484,15 @@
      "source": [
       "## Implied view of a portfolio\n",
       "\n",
-      "* From any portfolio, we can backout its implied excess return forecast $\\bs f$\n",
+      "From any portfolio, we can backout its implied excess return forecast $\\bs f$\n",
       "* The implied forecast is nothing but the betas to the portfolio\n",
-      "* Consider the market portfolio: the market collectively believe that $\\bs {f = \\beta_m}$ (CAPM)\n",
+      "\n",
+      "Consider the market portfolio: the market collectively believe that $\\bs f = \\bs \\beta_m$ \n",
+      "* Recall that the $\\bs f$ is only meaningful in a relative sense, the implied excess return forecast of individual asset is therefore: \n",
+      "\n",
+      "$$ \\bs f = \\bs \\beta_m \\mathbb{E}[\\tilde r_m] $$\n",
+      "\n",
+      "* this is exactly the CAPM, where $\\tilde r_m$ is the market portfolio's return.\n",
       "\n",
       "The implied view is a much better estimate of the return than from historical data.\n",
       "* How many years of historical data do you need to reliably estimate expected returns?"
@@ -1781,6 +1787,17 @@
       }
      ],
      "prompt_number": 32
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "* note that these forecast are only meaningful in a relative sense"
+     ]
     },
     {
      "cell_type": "markdown",
