--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:bd91769e5d778c80d48c2841dea9b981b335ec947a67cd51898ac5f565fa6710"
+  "signature": "sha256:14f8081d523cc5f58fcd04c6e90732e97e0363b406b7804e399376d4bc4ff4b8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1403,7 +1403,7 @@
       "## Optimal portfolio and Sharp Ratio\n",
       "Given the view $\\bs f$, the optimal portfolio $\\bs w$ to express the view is:\n",
       " * minimize the variance (risk): $\\bs w^TV\\bs w$\n",
-      " * while preserving an unit dollar of excess return: $\\bs w^T \\bs f = 1$\n",
+      " * while preserving an unit dollar of excess P&L: $\\bs w^T \\bs f = 1$\n",
       " \n",
       "which gives a portfolio with the largest Sharp ratio under the view $\\bs f$.\n",
       "* it can then be scaled to match the dollar amount to be invested\n",
@@ -1459,7 +1459,7 @@
      "source": [
       "## Important characteristic portfolios\n",
       "\n",
-      "Note that $\\bs f$ is only meaningful in a relative sense, the resulting portfolio remains unchanged if $\\bs f$ is scaled.\n",
+      "Note that $\\bs f$ is only meaningful in a relative sense.\n",
       "\n",
       "Identical returns: $\\bs{f = e} = [1, 1, ...., 1]^T$: \n",
       "\n",
@@ -1486,16 +1486,17 @@
       "\n",
       "From any portfolio, we can backout its implied excess return forecast $\\bs f$\n",
       "* The implied forecast is nothing but the betas to the portfolio\n",
+      "* The implied forecast is also only meaningful in a relative sense\n",
       "\n",
       "Consider the market portfolio: the market collectively believe that $\\bs f = \\bs \\beta_m$ \n",
-      "* Recall that the $\\bs f$ is only meaningful in a relative sense, the implied excess return forecast of individual asset is therefore: \n",
+      "* The actual (as oppose to relative) implied excess return is therefore: \n",
       "\n",
       "$$ \\bs f = \\bs \\beta_m \\left(\\mathbb{E}[\\tilde r_m] - r_0\\right)$$\n",
       "\n",
-      "* this is exactly the CAPM, where $\\tilde r_m$ is the market portfolio's return.\n",
+      "* where $\\tilde r_m$ is the market portfolio's return, this is exactly the CAPM.\n",
       "\n",
-      "The implied view is a much better estimate of the return than from historical data.\n",
-      "* How many years of historical data do you need to reliably estimate expected returns?"
+      "The implied view is a much better estimate of returns than using historical data.\n",
+      "* How many years of historical data do we need to reliably estimate expected returns?"
      ]
     },
     {
